--- a/style.css
+++ b/style.css
@@ -1,6 +1,42 @@
-.timerAPP {
+#timerAPP {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
+	background-color: papayawhip;
+	height: 100vh;
+	width: 100vw;
+}
+#innerSquare {
+	background-color: white;
+	height: 75vh;
+	width: 75vw;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 100px;
+	justify-content: center;
+	border: solid black 3px;
+}
+
+#timerBtn {
+	margin: 20px;
+}
+
+#timerTitle {
+	font-size: 60px;
+}
+#timer {
+	background-color: rgb(250, 223, 227);
+}
+
+#finishedScreen {
+	background-color: papayawhip;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-size: 100px;
+	border: solid black 3px;
+	padding: 70px;
 }
